# NmeaConverter_pi

./: .travis.yml  CMakeLists.txt  NmeaConverter.odt  NmeaConverter_pi.kdev4  README.md  VERSION.cmake  appveyor.yml
.circleci/: config.yml
.kdev4/: NmeaConverter_pi.kdev4
Forms/: tpControlDialog.fbp  tpControlDialogDef.cpp  tpControlDialogDef.h
NmeaConverter_pi/: .directory  CMakeLists.txt
NmeaConverter_pi/src/: CMakeLists.txt  NmeaConverter_pi.cpp  NmeaConverter_pi.h
NmeaConverter_pi/src/wxecmath_v063_full/docs/: wxecmath_v063.chm
NmeaConverter_pi/src/wxecmath_v063_full/docs/html/: classwx_ec_axis-members.html  classwx_ec_axis.html  classwx_ec_complex-members.html  classwx_ec_complex.html  classwx_ec_engine-members.html  classwx_ec_matrix.html  classwx_ec_plot-members.html  classwx_ec_u_point-members.html  ec__complex_8h.html  ec__matrix_8h.html  ec__plot_8h.html  funclist.html  globals_defs.html  globals_eval.html  license.html  structwx_ec_position-members.html  xh__wxecplot_8h.html
NmeaConverter_pi/src/wxecmath_v063_full/imgs/: icon.xpm
NmeaConverter_pi/src/wxecmath_v063_full/lib/: ec_defs.h  ec_engine.cpp  ec_matrix.cpp  ec_plot.h  xh_wxecplot.h
NmeaConverter_pi/src/wxecmath_v063_full/samples/: compile.sh
NmeaConverter_pi/src/wxecmath_v063_full/samples.bin/: histogram.elf  inline.elf  plot.elf
NmeaConverter_pi/src/wxecmath_v063_full/samples/console/: main.cpp
NmeaConverter_pi/src/wxecmath_v063_full/samples/histogram/: app.cpp  app.h
NmeaConverter_pi/src/wxecmath_v063_full/samples/mandelbrot/: app.h  fractal.cpp  fractal.h
NmeaConverter_pi/src/wxecmath_v063_full/samples/matrix/: app.cpp  app.h  custommatrix.h  matrix.cpp  vision.h
NmeaConverter_pi/src/wxecmath_v063_full/samples/plot/: app.cpp  app.h  plotdemo.cpp
NmeaConverter_pi/src/wxecmath_v063_full/samples/visualcalc/: app.cpp  debugwin.h  frame.cpp  frame.h  res.rc
OLD/: nmeaconverter-plugin.xml.in
OLD/ocpninclude/: TexFont.h.bak
OLD/ocpnsrc/: TexFont.cpp
api-16/: opencpn.lib
ci/: appveyor-upload.sh  circleci-upload-flatpak.sh  circleci-upload.sh  control  travis-build-raspbian-armhf-part2.sh  travis-build-raspbian-armhf.sh  travis-build-ubuntu-arm64.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  version.h.in
cmake/in-files/: cloudsmith-upload.sh.in  version.h.in
debian/: changelog  control  copyright
flatpak/: Makefile  README.md  org.opencpn.OpenCPN.Plugin.radar.yaml
include/: globals.h  testplugin_pi.h  tpControlDialogImpl.h  tpControlImpl.h  tpIconCombo.h  tpJSON.h  tpUtils.h  tpdc.h  tpicons.h
manual/: antora.yml  site.yml
manual/modules/: antora.yml
manual/modules/ROOT/pages/: index.adoc
manual/nmea_converter/: site.yml
manual/nmea_converter/modules/ROOT/pages/: nmea_converter.adoc  vdr2_-_copie.xls
ocpninclude/: cutil.h
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  en_GB.po  es.po  es_EM.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  he_IL.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  (+21 more)
src/: NmeaConverter_pi.cpp  NmeaConverter_pi.h  ec_defs.h  ec_engine.cpp  icons.cpp  icons.h  icons.sh  version.h
src/wxecmath_v063_full/: AUTHORS
src/wxecmath_v063_full/docs/html/: annotated.html  classwx_ec_curve-members.html  classwx_ec_curve.html  classwx_ec_engine.html  classwx_ec_matrix-members.html  classwx_ec_plot.html  classwx_ec_u_point.html  ec__defs_8h.html  ec__engine_8h.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  index.html  naming.html  overview.html  samples.html  structwx_ec_const_map.html  structwx_ec_position.html  syntax.html
src/wxecmath_v063_full/lib/: ec_complex.h  ec_engine.h  ec_matrix.h  ec_plot.cpp  xh_wxecplot.cpp
src/wxecmath_v063_full/samples.bin/: mandelbrot.elf  matrix.elf  speedtest.elf  visualcalc.elf
src/wxecmath_v063_full/samples/histogram/: histogram.cpp  histogram.h
src/wxecmath_v063_full/samples/inline/: inline.cpp
src/wxecmath_v063_full/samples/mandelbrot/: app.cpp
src/wxecmath_v063_full/samples/matrix/: custommatrix.cpp  matrix.h  vision.cpp
src/wxecmath_v063_full/samples/plot/: plotdemo.h
src/wxecmath_v063_full/samples/speedtest/: speed.cpp
src/wxecmath_v063_full/samples/visualcalc/: app.h  debugwin.cpp
